base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx-internal
  rules:
    - host: hello.demo.johnmyit.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: helloworld
                port:
                  number: 80
